Jump to Symfony 3.4
Thanks to the BC compatibility, almost nothing have to be changed.
All changes are related to new bundle version of:
- SensioFrameworkExtraBundle
- DoctrineFixturesBundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -357,3 +357,8 @@ jms_serializer:
         # see: https://github.com/schmittjoh/JMSSerializerBundle/pull/494
         datetime:
             default_format: "Y-m-d\\TH:i:sO" # ATOM
+
+# see https://github.com/symfony/symfony-standard/pull/1133
+sensio_framework_extra:
+   router:
+        annotations: false
