--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "ext-iconv": "*",
         "ext-tokenizer": "*",
         "ext-pdo": "*",
-        "symfony/symfony": "~3.3.13",
+        "symfony/symfony": "3.4.*",
         "doctrine/orm": "^2.5.12",
         "doctrine/doctrine-bundle": "^1.8.0",
         "doctrine/doctrine-cache-bundle": "^1.3.2",
@@ -51,7 +51,7 @@
         "symfony/swiftmailer-bundle": "^2.6.7",
         "symfony/monolog-bundle": "^3.1.2",
         "sensio/distribution-bundle": "^5.0.21",
-        "sensio/framework-extra-bundle": "^3.0.28",
+        "sensio/framework-extra-bundle": "^5.2.1",
         "incenteev/composer-parameter-handler": "^2.1.2",
         "nelmio/cors-bundle": "~1.5",
         "friendsofsymfony/rest-bundle": "~2.1",
@@ -82,14 +82,13 @@
         "predis/predis": "^1.1.1",
         "javibravo/simpleue": "^2.0",
         "symfony/dom-crawler": "^3.3.13",
-        "friendsofsymfony/jsrouting-bundle": "^1.6.3",
+        "friendsofsymfony/jsrouting-bundle": "^2.2.1",
         "bdunogier/guzzle-site-authenticator": "^1.0.0@dev",
         "defuse/php-encryption": "^2.1",
         "html2text/html2text": "^4.1"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "~2.2",
-        "doctrine/data-fixtures": "~1.1",
+        "doctrine/doctrine-fixtures-bundle": "~3.0",
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.3",
         "friendsofphp/php-cs-fixer": "~2.0",
