--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y \
         libmcrypt-dev libicu-dev libpq-dev libxml2-dev libpng12-dev libjpeg-dev \
     && /usr/local/bin/docker-php-ext-configure gd --with-jpeg-dir=/usr/include \
     && docker-php-ext-install \
-        iconv mcrypt mbstring intl pdo pdo_mysql pdo_pgsql gd
+        iconv mbstring intl pdo pdo_mysql pdo_pgsql gd
 
 RUN echo "date.timezone="$timezone > /usr/local/etc/php/conf.d/date_timezone.ini
 
