libpng12-dev was rename as libpng-dev

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -4,7 +4,7 @@ FROM php:fpm
 ARG timezone='Europe/Paris'
 
 RUN apt-get update && apt-get install -y \
-        libmcrypt-dev libicu-dev libpq-dev libxml2-dev libpng12-dev libjpeg-dev \
+        libmcrypt-dev libicu-dev libpq-dev libxml2-dev libpng-dev libjpeg-dev \
     && /usr/local/bin/docker-php-ext-configure gd --with-jpeg-dir=/usr/include \
     && docker-php-ext-install \
         iconv mbstring intl pdo pdo_mysql pdo_pgsql gd
