--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,6 @@ cache:
         - $HOME/.yarn-cache
 
 php:
-    - 5.6
-    - 7.0
     - 7.1
     - 7.2
     - nightly
@@ -38,7 +36,7 @@ env:
 matrix:
     fast_finish: true
     include:
-        - php: 7.0
+        - php: 7.2
           env: CS_FIXER=run VALIDATE_TRANSLATION_FILE=run ASSETS=build DB=sqlite
     allow_failures:
         - php: nightly
@@ -63,14 +61,6 @@ before_script:
     - if [[ ! $PHP = hhvm* ]]; then phpenv config-rm xdebug.ini || echo "xdebug not available"; fi
     - composer self-update --no-progress
     - if [[ $DB = pgsql ]]; then psql -c 'create database wallabag_test;' -U postgres; fi;
-    # increase swap to avoid "proc_open(): fork failed - Cannot allocate memory"
-    # this should be removed when no more PHP 5 build will be defined
-    - sudo swapon -s
-    - sudo fallocate -l 4G /swapfile
-    - sudo chmod 600 /swapfile
-    - sudo mkswap /swapfile
-    - sudo swapon /swapfile
-    - sudo swapon -s
 
 script:
     - travis_wait bash composer install -o --no-interaction --no-progress --prefer-dist
@@ -78,9 +68,7 @@ script:
     - make prepare DB=$DB
     - echo "travis_fold:end:prepare"
 
-    - echo "travis_fold:start:fixtures"
-    - php bin/console doctrine:fixtures:load --no-interaction --env=test
-    - echo "travis_fold:end:fixtures"
+    - make fixtures
 
     - if [[ $VALIDATE_TRANSLATION_FILE = '' ]]; then ./bin/simple-phpunit -v ; fi;
     - if [[ $CS_FIXER = run ]]; then php bin/php-cs-fixer fix --verbose --dry-run ; fi;
