--- a/composer.json
+++ b/composer.json
@@ -58,7 +58,7 @@
         "jms/serializer-bundle": "~2.2",
         "nelmio/api-doc-bundle": "^2.13.2",
         "mgargano/simplehtmldom": "~1.5",
-        "wallabag/tcpdf": "^6.2.15",
+        "wallabag/tcpdf": "^6.2.26",
         "simplepie/simplepie": "~1.5",
         "willdurand/hateoas-bundle": "~1.3",
         "liip/theme-bundle": "^1.4.6",
@@ -68,7 +68,7 @@
         "friendsofsymfony/oauth-server-bundle": "^1.5.2",
         "stof/doctrine-extensions-bundle": "^1.2",
         "scheb/two-factor-bundle": "^2.14.0",
-        "grandt/phpepub": "^4.0.7",
+        "grandt/phpepub": "dev-master",
         "wallabag/php-mobi": "~1.0.0",
         "kphoen/rulerz-bundle": "~0.13",
         "guzzlehttp/guzzle": "^5.3.1",
@@ -122,18 +122,33 @@
         }
     },
     "autoload": {
-        "psr-4": { "Wallabag\\": "src/Wallabag/" },
-        "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
+        "psr-4": {
+            "Wallabag\\": "src/Wallabag/"
+        },
+        "classmap": [
+            "app/AppKernel.php",
+            "app/AppCache.php"
+        ]
     },
     "autoload-dev": {
-        "psr-4": { "Tests\\": "tests/" }
+        "psr-4": {
+            "Tests\\": "tests/"
+        },
+        "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
     },
     "config": {
         "bin-dir": "bin",
         "platform": {
-            "php": "7.1.0"
+            "php": "7.1"
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/Daniel-KM/PHPePub",
+            "comment": "The most up-to-date PHPePub as of now"
+        }
+    ]
 }
