--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,14 @@
 language: php
 
 services:
-  - rabbitmq
-  - redis
-
-# faster builds on docker-container setup
-sudo: false
+    - rabbitmq
+    - redis
 
 # used for HHVM
 addons:
-  apt:
-    packages:
-      - tidy
+    apt:
+        packages:
+            - tidy
 
 # cache vendor dirs
 cache:
@@ -68,7 +65,7 @@ before_install:
     - if [[ $TRAVIS_REPO_SLUG = wallabag/wallabag ]]; then cp .composer-auth.json ~/.composer/auth.json; fi;
 
 script:
-    - travis_wait bash composer install -o  --no-interaction --no-progress --prefer-dist
+    - COMPOSER_MEMORY_LIMIT=-1 travis_wait bash composer install -o  --no-interaction --no-progress --prefer-dist
     - echo "travis_fold:start:prepare"
     - make prepare DB=$DB
     - echo "travis_fold:end:prepare"
