--- a/composer.json
+++ b/composer.json
@@ -44,15 +44,15 @@
         "ext-tokenizer": "*",
         "ext-pdo": "*",
         "symfony/symfony": "3.4.*",
-        "doctrine/orm": "^2.5.12",
-        "doctrine/doctrine-bundle": "^1.8.0",
-        "doctrine/doctrine-cache-bundle": "^1.3.2",
-        "twig/extensions": "^1.5.1",
-        "symfony/swiftmailer-bundle": "^3.2.3",
-        "symfony/monolog-bundle": "^3.1.2",
-        "sensio/distribution-bundle": "^5.0.21",
-        "sensio/framework-extra-bundle": "^5.2.1",
-        "incenteev/composer-parameter-handler": "^2.1.2",
+        "doctrine/orm": "^2.6",
+        "doctrine/doctrine-bundle": "^1.9",
+        "doctrine/doctrine-cache-bundle": "^1.3",
+        "twig/extensions": "^1.5",
+        "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/monolog-bundle": "^3.1",
+        "sensio/distribution-bundle": "^5.0",
+        "sensio/framework-extra-bundle": "^5.2",
+        "incenteev/composer-parameter-handler": "^2.1",
         "nelmio/cors-bundle": "~1.5",
         "friendsofsymfony/rest-bundle": "~2.1",
         "jms/serializer-bundle": "~2.2",
@@ -62,27 +62,26 @@
         "simplepie/simplepie": "~1.5",
         "willdurand/hateoas-bundle": "~1.3",
         "liip/theme-bundle": "^1.4.6",
-        "lexik/form-filter-bundle": "^5.0.4",
+        "lexik/form-filter-bundle": "^5.0",
         "j0k3r/graby": "^1.0",
         "friendsofsymfony/user-bundle": "2.0.*",
-        "friendsofsymfony/oauth-server-bundle": "^1.5.2",
+        "friendsofsymfony/oauth-server-bundle": "^1.5",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "scheb/two-factor-bundle": "^2.14.0",
+        "scheb/two-factor-bundle": "^2.14",
         "grandt/phpepub": "dev-master",
-        "wallabag/php-mobi": "~1.0.0",
+        "wallabag/php-mobi": "~1.0",
         "kphoen/rulerz-bundle": "~0.13",
         "guzzlehttp/guzzle": "^5.3.1",
         "doctrine/doctrine-migrations-bundle": "^1.3",
-        "paragonie/random_compat": "^2.0.11",
         "craue/config-bundle": "~2.0",
         "mnapoli/piwik-twig-extension": "^1.0",
         "ocramius/proxy-manager": "^1.0.2",
-        "white-october/pagerfanta-bundle": "^1.1.0",
+        "white-october/pagerfanta-bundle": "^1.1",
         "php-amqplib/rabbitmq-bundle": "^1.14",
         "predis/predis": "v1.1.x-dev",
         "javibravo/simpleue": "^2.0",
-        "symfony/dom-crawler": "^3.3.13",
-        "friendsofsymfony/jsrouting-bundle": "^2.2.1",
+        "symfony/dom-crawler": "^3.4",
+        "friendsofsymfony/jsrouting-bundle": "^2.2",
         "bdunogier/guzzle-site-authenticator": "^1.0.0@dev",
         "defuse/php-encryption": "^2.1",
         "html2text/html2text": "^4.1"
@@ -90,10 +89,10 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "~3.0",
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "3.4.x-dev",
-        "friendsofphp/php-cs-fixer": "~2.0",
-        "m6web/redis-mock": "^2.0",
-        "dama/doctrine-test-bundle": "^4.0"
+        "symfony/phpunit-bridge": "^3.4",
+        "friendsofphp/php-cs-fixer": "~2.13",
+        "m6web/redis-mock": "^4.1",
+        "dama/doctrine-test-bundle": "^5.0"
     },
     "scripts": {
         "post-cmd": [
