--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,6 @@ services:
     - rabbitmq
     - redis
 
-# used for HHVM
-addons:
-    apt:
-        packages:
-            - tidy
-
 # cache vendor dirs
 cache:
     apt: true
@@ -23,6 +17,7 @@ cache:
 php:
     - 7.1
     - 7.2
+    - 7.3
     - nightly
 
 node_js:
@@ -40,6 +35,7 @@ matrix:
           env: CS_FIXER=run VALIDATE_TRANSLATION_FILE=run ASSETS=build DB=sqlite
     allow_failures:
         - php: nightly
+        - php: 7.3
 
 # exclude v1 branches
 branches:
@@ -70,7 +66,7 @@ script:
 
     - make fixtures
 
-    - if [[ $VALIDATE_TRANSLATION_FILE = '' ]]; then ./bin/simple-phpunit -v ; fi;
+    - if [[ $VALIDATE_TRANSLATION_FILE = '' ]]; then SYMFONY_PHPUNIT_VERSION=6.5 ./bin/simple-phpunit -v ; fi;
     - if [[ $CS_FIXER = run ]]; then php bin/php-cs-fixer fix --verbose --dry-run ; fi;
     - if [[ $VALIDATE_TRANSLATION_FILE = run ]]; then php bin/console lint:yaml src/Wallabag/CoreBundle/Resources/translations -v ; fi;
     - if [[ $VALIDATE_TRANSLATION_FILE = run ]]; then php bin/console lint:yaml app/Resources/CraueConfigBundle/translations -v ; fi;
