--- a/composer.json
+++ b/composer.json
@@ -73,7 +73,7 @@
         "kphoen/rulerz-bundle": "~0.13",
         "guzzlehttp/guzzle": "^5.3.1",
         "doctrine/doctrine-migrations-bundle": "^1.3",
-        "craue/config-bundle": "~2.0",
+        "craue/config-bundle": "dev-utf8mb4",
         "mnapoli/piwik-twig-extension": "^1.0",
         "ocramius/proxy-manager": "^1.0.2",
         "white-october/pagerfanta-bundle": "^1.1",
@@ -148,6 +148,11 @@
             "type": "vcs",
             "url": "https://github.com/Daniel-KM/PHPePub",
             "comment": "The most up-to-date PHPePub as of now"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/wallabag/CraueConfigBundle",
+            "comment": "To handle utf8mb4 field size"
         }
     ]
 }
