--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -171,6 +171,7 @@ liip_theme:
     themes:
         - baggy
         - material
+        - darkmateria
     autodetect_theme: wallabag_core.helper.detect_active_theme
 
     path_patterns:
