Fix PG & Travis drop/create database

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,15 +51,17 @@ install:
 
 before_script:
     - PHP=$TRAVIS_PHP_VERSION
-    - if [[ ! $PHP = hhvm* ]]; then echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi;
-    # xdebug isn't enable for PHP 7.1
-    - if [[ ! $PHP = hhvm* ]]; then phpenv config-rm xdebug.ini || echo "xdebug not available"; fi
+    - echo "memory_limit=-1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
+    - phpenv config-rm xdebug.ini || echo "xdebug not available"
     - composer self-update --no-progress
 
 script:
     - travis_wait bash composer install -o --no-interaction --no-progress --prefer-dist
+
     - echo "travis_fold:start:prepare"
-    - make prepare DB=$DB
+    # custom "prepare" for PG because the database should be created with a different user (see "before_script")
+    - if [[ ! $DB = pgsql ]]; then make prepare DB=$DB; fi;
+    - if [[ $DB = pgsql ]]; then make prepare-travis-pg DB=$DB; fi;
     - echo "travis_fold:end:prepare"
 
     - make fixtures
