--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "wallabag/wallabag",
     "type": "project",
     "description": "open source self hostable read-it-later web application",
-    "keywords": ["read-it-later","read it later"],
+    "keywords": [
+        "read-it-later",
+        "read it later"
+    ],
     "homepage": "https://github.com/wallabag/wallabag",
     "license": "MIT",
     "authors": [
@@ -75,7 +78,7 @@
         "doctrine/doctrine-migrations-bundle": "^1.3",
         "craue/config-bundle": "dev-utf8mb4",
         "mnapoli/piwik-twig-extension": "^1.0",
-        "ocramius/proxy-manager": "^1.0.2",
+        "ocramius/proxy-manager": "^2.1.1",
         "white-october/pagerfanta-bundle": "^1.1",
         "php-amqplib/rabbitmq-bundle": "^1.14",
         "predis/predis": "v1.1.x-dev",
@@ -133,7 +136,9 @@
         "psr-4": {
             "Tests\\": "tests/"
         },
-        "files": [ "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php" ]
+        "files": [
+            "vendor/symfony/symfony/src/Symfony/Component/VarDumper/Resources/functions/dump.php"
+        ]
     },
     "config": {
         "bin-dir": "bin",
