--- a/composer.json
+++ b/composer.json
@@ -92,7 +92,11 @@
         "symfony/phpunit-bridge": "^4.2",
         "friendsofphp/php-cs-fixer": "~2.13",
         "m6web/redis-mock": "^4.1",
-        "dama/doctrine-test-bundle": "^5.0"
+        "dama/doctrine-test-bundle": "^5.0",
+        "phpstan/phpstan": "^0.11.0",
+        "phpstan/phpstan-phpunit": "^0.11.0",
+        "phpstan/phpstan-symfony": "^0.11.0",
+        "phpstan/phpstan-doctrine": "^0.11.0"
     },
     "scripts": {
         "post-cmd": [
