--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -4,10 +4,25 @@ FROM php:7.2-fpm
 ARG timezone='Europe/Paris'
 
 RUN apt-get update && apt-get install -y \
-        libmcrypt-dev libicu-dev libpq-dev libxml2-dev libpng-dev libjpeg-dev \
-    && /usr/local/bin/docker-php-ext-configure gd --with-jpeg-dir=/usr/include \
-    && docker-php-ext-install \
-        iconv mbstring intl pdo pdo_mysql pdo_pgsql gd
+        libmcrypt-dev \
+        libicu-dev \
+        libpq-dev \
+        libxml2-dev \
+        libpng-dev \
+        libjpeg-dev \
+        libsqlite3-dev \
+        imagemagick \
+        libmagickwand-dev
+RUN docker-php-ext-install \
+        iconv \
+        mbstring \
+        intl \
+        pdo \
+        pdo_mysql \
+        pdo_pgsql \
+        pdo_sqlite
+
+RUN printf "\n" | pecl install imagick && docker-php-ext-enable imagick
 
 RUN echo "date.timezone="$timezone > /usr/local/etc/php/conf.d/date_timezone.ini
 
