Add ability to import/export tagging rules
- Add missing translations
- Add some tests
- Add `/api/taggingrule/export` API endpoint
- Add baggy theme
- Add error message when importing tagging rules failed
- Also fix all translations (I think we are good now)

--- a/src/Wallabag/ApiBundle/Resources/config/routing_rest.yml
+++ b/src/Wallabag/ApiBundle/Resources/config/routing_rest.yml
@@ -13,6 +13,11 @@ tag:
   resource: "WallabagApiBundle:TagRest"
   name_prefix:  api_
 
+tagging_rule:
+  type: rest
+  resource: "WallabagApiBundle:TaggingRuleRest"
+  name_prefix:  api_
+
 annotation:
   type: rest
   resource: "WallabagApiBundle:AnnotationRest"
