--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,7 @@
         "kphoen/rulerz-bundle": "~0.13",
         "guzzlehttp/guzzle": "^5.3.1",
         "doctrine/doctrine-migrations-bundle": "^1.3",
-        "craue/config-bundle": "dev-utf8mb4",
+        "craue/config-bundle": "^2.3.0",
         "mnapoli/piwik-twig-extension": "^2.0",
         "ocramius/proxy-manager": "^2.1.1",
         "white-october/pagerfanta-bundle": "^1.1",
@@ -166,11 +166,6 @@
             "type": "vcs",
             "url": "https://github.com/Daniel-KM/PHPePub",
             "comment": "The most up-to-date PHPePub as of now"
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/wallabag/CraueConfigBundle",
-            "comment": "To handle utf8mb4 field size"
         }
     ]
 }
