--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -277,6 +277,11 @@ old_sound_rabbit_mq:
             exchange_options:
                 name: 'wallabag.import.chrome'
                 type: topic
+        import_rss:
+            connection: default
+            exchange_options:
+                name: 'wallabag.import.rss'
+                type: topic
     consumers:
         import_pocket:
             connection: default
@@ -358,6 +363,15 @@ old_sound_rabbit_mq:
             queue_options:
                 name: 'wallabag.import.chrome'
             callback: wallabag_import.consumer.amqp.chrome
+            qos_options: {prefetch_count: "%rabbitmq_prefetch_count%"}
+        import_rss:
+            connection: default
+            exchange_options:
+                name: 'wallabag.import.rss'
+                type: topic
+            queue_options:
+                name: 'wallabag.import.rss'
+            callback: wallabag_import.consumer.amqp.rss
             qos_options: {prefetch_count: "%rabbitmq_prefetch_count%"}
 
 fos_js_routing:
