Add issuer to otp config
Signed-off-by: Thomas Citharel <tcit@tcit.fr>

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -209,6 +209,7 @@ scheb_two_factor:
 
     google:
         enabled: "%twofactor_auth%"
+        issuer: "%server_name%"
         template: WallabagUserBundle:Authentication:form.html.twig
 
     email:
