--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
         "jms/serializer-bundle": "~2.2",
         "nelmio/api-doc-bundle": "^2.13.2",
         "mgargano/simplehtmldom": "~1.5",
-        "wallabag/tcpdf": "^6.2.26",
+        "tecnickcom/tcpdf": "^6.3.0",
         "willdurand/hateoas-bundle": "~1.3",
         "liip/theme-bundle": "^1.4.6",
         "lexik/form-filter-bundle": "^5.0.4",
