--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "ext-tidy": "*",
         "ext-tokenizer": "*",
         "ext-xml": "*",
-        "babdev/pagerfanta-bundle": "^2.4",
+        "babdev/pagerfanta-bundle": "^2.5",
         "bdunogier/guzzle-site-authenticator": "^1.0.0",
         "craue/config-bundle": "^2.3.0",
         "defuse/php-encryption": "^2.1",
@@ -77,7 +77,7 @@
         "nelmio/api-doc-bundle": "^2.13.2",
         "nelmio/cors-bundle": "~1.5",
         "ocramius/proxy-manager": "^2.1.1",
-        "pagerfanta/doctrine-orm-adapter": "^2.4",
+        "pagerfanta/pagerfanta": "^2.4",
         "php-amqplib/rabbitmq-bundle": "^1.14",
         "php-http/guzzle5-adapter": "^2.0",
         "php-http/httplug-bundle": "^1.14",
