Added dutch translation to the settings
Since the NL translation is 100% i think it deserves a place in the settings page :-)

--- a/app/config/wallabag.yml
+++ b/app/config/wallabag.yml
@@ -5,6 +5,7 @@ wallabag_core:
         en: 'English'
         fr: 'Français'
         de: 'Deutsch'
+        nl: 'Dutch'
         th: 'ไทย'
         tr: 'Türkçe'
         fa: 'فارسی'
