Update for `webpack-manifest-plugin`

--- a/web/wallassets/manifest.json
+++ b/web/wallassets/manifest.json
@@ -1,10 +1,17 @@
 {
   "material.css": "material.css",
   "material.js": "material.js",
+  "material.png": "img/annotator-glyph-sprite.png",
+  "material.css.map": "material.css.map",
+  "material.js.map": "material.js.map",
   "baggy.css": "baggy.css",
   "baggy.js": "baggy.js",
+  "baggy.png": "img/annotator-glyph-sprite.png",
+  "baggy.css.map": "baggy.css.map",
+  "baggy.js.map": "baggy.js.map",
   "public.css": "public.css",
   "public.js": "public.js",
+  "public.css.map": "public.css.map",
   "fonts/lato-normal-italic.woff": "fonts/lato-normal-italic.woff",
   "fonts/lato-semibold-italic.woff": "fonts/lato-semibold-italic.woff",
   "fonts/lato-medium-italic.woff": "fonts/lato-medium-italic.woff",
