--- a/web/wallassets/manifest.json
+++ b/web/wallassets/manifest.json
@@ -1,12 +1,21 @@
 {
   "material.css": "material.css",
   "material.js": "material.js",
-  "material.png": "img/annotator-glyph-sprite.png",
+  "material.eot": "fonts/MaterialIcons-Regular.eot",
+  "material.woff2": "fonts/lato-black-italic.woff2",
+  "material.woff": "fonts/lato-black-italic.woff",
+  "material.ttf": "fonts/IcoMoon-Free.ttf",
+  "material.png": "themes/_global/img/icons/scuttle.png",
   "material.css.map": "material.css.map",
   "material.js.map": "material.js.map",
   "baggy.css": "baggy.css",
   "baggy.js": "baggy.js",
-  "baggy.png": "img/annotator-glyph-sprite.png",
+  "baggy.eot": "fonts/MaterialIcons-Regular.eot",
+  "baggy.woff2": "fonts/lato-black-italic.woff2",
+  "baggy.woff": "fonts/lato-black-italic.woff",
+  "baggy.ttf": "fonts/IcoMoon-Free.ttf",
+  "baggy.png": "themes/_global/img/list.png",
+  "baggy.svg": "themes/_global/img/icons/Diaspora-asterisk.svg",
   "baggy.css.map": "baggy.css.map",
   "baggy.js.map": "baggy.js.map",
   "public.css": "public.css",
