Update docker-compose and Dockerfile for dev env
This change should ease the spawn of a development environment.
It can be used as a vscode devcontainer.

Signed-off-by: Kevin Decherf <kevin@kdecherf.com>

--- a/.gitignore
+++ b/.gitignore
@@ -35,15 +35,14 @@ web/uploads/
 /build
 /coverage
 
+# Development
+docker/php/env
+
 # Composer PHAR
 /composer.phar
 
 # Data for wallabag
 data/db/wallabag*.sqlite
-
-# Docker container logs and data
-docker/logs/
-docker/data/
 
 # assets stuff
 node_modules/
