Composer 2.3 isn't compatible with wallabag

--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
     },
     "require": {
         "php": ">=7.2.5",
+        "composer": "< 2.3",
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-dom": "*",
