--- a/.github/workflows/coding-standards.yml
+++ b/.github/workflows/coding-standards.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           coverage: "none"
           php-version: "7.4"
-          tools: cs2pr, pecl, composer:v2
+          tools: cs2pr, pecl, composer:2.2
           extensions: pdo, pdo_mysql, pdo_sqlite, pdo_pgsql, curl, imagick, pgsql, gd, tidy
           ini-values: "date.timezone=Europe/Paris"
         env:
